<resources>
    <string name="app_name">DND Companion App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name:</string>
    <string name="Hp">Hit Points:</string>
    <string name="ac">Armor Class:</string>
    <string name="sub">Submit</string>
    <string name="dam">Damage</string>
    <string name="add">Add</string>
    <string name="can">Cancel</string>
    <string name="type">Type: </string>
    <string name="play">Player</string>
    <string name="Eny">"Enemy"</string>
    <string name="Nu">Neutral</string>
    <string name="Amount">Amount</string>
    <string name="Sort">SORT</string>
    <string name="byName">By Name:</string>
    <string name="ascendingBtn">Ascending</string>
    <string name="descendingBtn">Descending</string>
    <string name="deleteBtn">Delete</string>
    <string name="byAc">Armor Class:</string>
    <string name="byHP">By Hit Points:</string>
    <string name="back">back</string>
    <string name="hp">Hit Points:</string>
    <string name="tap">Tap anywhere to start</string>
</resources>